fix popup on ios

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3988,7 +3988,7 @@ textarea.form-control-lg {
 }
 
 .nav-pills .nav-link {
-  background: none;
+  background-color: white;
   border: 0;
   border-radius: 0.25rem;
 }
