--- a/public/css/oldapp.css
+++ b/public/css/oldapp.css
@@ -109,14 +109,14 @@
 }
 /*Fonts*/
 .fontTitle{
-    font-family:Neutra-Display-Titling ;
+    font-family: Neutra-Display-Titling, serif ;
 }
 .fontLight{
-    font-family:Neutra-Display-Light;
+    font-family: Neutra-Display-Light, serif;
     color:black;
 }
 .fontThin{
-    font-family:Neutra-Display-Thin;
+    font-family: Neutra-Display-Thin, serif;
 }
 #confirm-choices{
     word-wrap: break-word;
@@ -130,6 +130,8 @@
   }
 .privacyTitle{
     width: auto;
+    background-color: white !important;
+    padding: 15px 30px !important;
 }
 
 /* cookies popup */
@@ -175,6 +177,10 @@
     .myPopup {
       padding: 5px 10px;
     }
+    .myTab{
+        background-color: white !important;
+        padding: 1% 3% !important;
+    }
   }
 /* END cookies popup */
 
@@ -193,6 +199,10 @@
 @media (max-width: 660px) {
     .myHeader{
         padding-left:0
+    }
+    .myTab{
+        background-color: white !important;
+        padding: 10% 10% !important;
     }
 }
 .teaser-cont{
@@ -216,15 +226,15 @@
 }
 .myContainer2{
     margin-left: 3.15%;
-    margin-right: 3.6%;
+    margin-right: 3.4%;
 }
 #cookie_btn{
-    width: 84.6%;
+    width: 82.55%;
 }
 @media only screen and (max-width: 992px) {
     .myContainer{
         margin-left: 1%;
         margin-right: 1%;
     }
-
 }
+
